chore: silence sun.misc.Unsafe deprecation warning in the launcher
On JDK 24+ the JVM prints a four-line "sun.misc.Unsafe::objectFieldOffset
... will be removed" warning on every `ccas` invocation — it comes from
scala-library's LazyVals, not our code, so we can't fix it at the source.

Suppress it with `--sun-misc-unsafe-memory-access=allow` added in the
native-packager launcher via bashScriptExtraDefines. That flag only exists
on JDK 23+ (and older JDKs don't emit the warning), so the launcher probes
the runtime's major version and adds it conditionally — keeping older JDKs
working. `ccas-server` execs through the `ccas` launcher, so it's covered too.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>